# rope_simulation

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md  main.cpp
Engine/: rope.hpp
cpp/: CMakeLists.txt  main.cpp
cpp/include/: ropesim
cpp/include/ropesim_bits/: rope.hpp
cpp/src/: rope.cpp
cpp/tests/: CMakeLists.txt
cpp/tests/src/: test.cpp
python/: CMakeLists.txt  rope_bindings.cpp  ropesim.cpp  sim.py
src/: rope.cpp  rope.hpp
